--- a/simpleCal.html
+++ b/simpleCal.html
@@ -18,6 +18,7 @@
               <label>Div</label>
               <input type="checkbox" name="div">
               <input type="button" name="btn">
+              <input type="button" name="btn2">
           </form><br>
           <button id="calculate">Calculate: </button>
           <script type="text/javascript">
